--- a/Root Directory/style.css
+++ b/Root Directory/style.css
@@ -7,5 +7,8 @@ h2{
     background-color: aliceblue;
 }
 td:hover{
-    background-color: lightgreen;
+    color: lightgreen;
+}
+td{
+    color: green;
 }
