--- a/Root Directory/style.css
+++ b/Root Directory/style.css
@@ -6,7 +6,7 @@ h2{
     font-family: 'Courier New', Courier, monospace;
     background-color: aliceblue;
 }
-section.td:hover{
+section.coloring div table tr td:hover{
     color: lightgreen;
 }
 section.table{
