--- a/Root Directory/Sample/style.css
+++ b/Root Directory/Sample/style.css
@@ -3,12 +3,12 @@ h2{
     font-family: 'Courier New', Courier, monospace;
     background-color: aliceblue;
 }
-p{
+p#color_blue {
     font-size:20px;
     color:white;
     background-color:rgb(79, 119, 194);
     padding-right:60px;
 }
-img{
+img#classic {
     padding:15px;
 }
