--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -1,7 +1,7 @@
 img.penguin {
     -webkit-filter: sepia(100%);
     filter: sepia(100%);
-    border-radius: 400px;
+    border-radius: 50%;
 }
 img.football {
     -webkit-filter: grayscale(100%);
