--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -15,7 +15,7 @@ img.tictakto {
     border-image: url(tic-tac-toe.png);
 }
 img.dinosaur {  
-    -webkit-filter: hue-rotate(90deg); drop-shadow(-5px -5px 5px #000000);
+    -webkit-filter: hue-rotate(90deg) drop-shadow(-5px -5px 5px #000000);
     filter: hue-rotate(90deg); drop-shadow(-5px -5px 5px #000000);
 }
 img.seagull{    
