--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -18,6 +18,9 @@ img.dinosaur {
     -webkit-filter: drop-shadow(-5px -5px 5px #000000);
     filter: drop-shadow(-5px -5px 5px #000000);
 }
+img.dinosaur {
+    -webkit-filter: hue-rotate(90deg);
+    filter: hue-rotate(90deg);
 img.seagull{    
 }
 img.butterfly{    
