--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -12,7 +12,7 @@ img.tictakto {
    .box {
      width: 50vw;
      height: 50vh;
-     overflow: hidden
+     overflow: hidden;
      resize: both;
      min-width: 150px;
      min-height: 60px
