--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -5,11 +5,16 @@ img.penguin {
     border: 1px solid #000;
 }
 img.football {
+   width: 200px;
+   height: 80px;
+   padding-top: 25px;
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    text-align: center;
+    margin: 0 auto;
     -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-}
+
 img.tictakto {    
-   .box {
      width: 50vw;
      height: 50vh;
      overflow: hidden;
