--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -12,16 +12,12 @@ img.football {
 }
 
 img.tictakto {    
-     width: 50vw;
-     height: 50vh;
-     overflow: hidden;
-     resize: both;
-     min-width: 150px;
-     min-height: 60px
-     display: grid;
-     place-items: center;
-     border-image: url(tic-tac-toe.png) 28 / 28px / 0 round;
-     border-width: 28px;
+     width: 200px;
+     height: 100px;
+     border-image: url(tic-tac-toe.png);
+     border-image-slice: 10;
+     border-width: 10px;
+     border-imge-repeat: round 
      border-style: solid;
 }
 
