--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -26,7 +26,7 @@ img.dinosaur {
 }
 img.seagull{
     height: 400px;
-    background-image: linear-gradient(-90deg, white, rgb(140,140,255));
+    background-image: linear-gradient(-45deg, white, #8c8ce1);
     -webkit-filter: drop-shadow(0px 10px 15px 5px);
 }
 img.butterfly{    
