--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -26,7 +26,7 @@ img.dinosaur {
 }
 img.seagull{
     height: 400px;
-    -webkit-filter: drop-shadow(5px 10px 15px 5px #000);
+    -webkit-filter: drop-shadow(5px 10px 15px #000000);
 }
 img.butterfly{    
 }
