--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -30,6 +30,8 @@ img.seagull{
     -webkit-filter: drop-shadow(5px 10px 15px #000000);
 }
 img.butterfly{    
+    filter: invert(100%);
+    border-radius: 50px 0px 50px 0px;
 }
 img.theater{
 }
