--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -1,16 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Butterfly</title>
-        <link rel="stylesheet" type="text/css" href="style_imitation.css">
-    </head>
-    <body>
-        <div class="theater">
-            <p id="stage" style="background-image: url(theater_stage.jpg); color: white; font-size: 15px; text-align: center; background-repeat: no-repeat;">
-                Presenting
-            </p>
-        </div>
-    </body>
-</html> 
+img.penguin {
+    -webkit-filter: sepia(50%);
+    filter: sepia(50%);
+    border-radius: 50%;
+    border: 1px solid #000;
+}
+
+img.football {
+    margin: auto;
+    display: block;
+    -webkit-filter: grayscale(100%);
+}
+
+img.tictakto {
+  width: 300px;
+  height: 200px;
+  border-width: 45px;
+  border-style: solid;
+  border-image: url(tic-tac-toe.png) ;
+  border-image-slice: 30;
+  border-image-repeat: round;
+}
+
+img.dinosaur {
+    -webkit-filter: hue-rotate(90deg) drop-shadow(10px 1px 5px #000000);
+}
+img.seagull{
+    background-image: linear-gradient(-45deg, white, #8c8ce1);
+    height: 400px;
+    -webkit-filter: drop-shadow(5px 10px 15px #000000);
+}
+img.butterfly{    
+    filter: invert(100%) opacity(75%);
+    border-radius: 100px 0px 100px 0px;
+}
+div.theater{
+    background-image: url(theater_stage.jpg);
+    background-repeat: no-repeat;
+    filter: blur(3px);
+    width: 400px;
+    height: 352px;
+}
