--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -47,4 +47,7 @@ p#stage{
     -webkit-transform: translate(-50%,-50%);
     margin:0;
     padding:0;
+    color: white;
+    font-size: 25px;
+}
 }
