--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -34,28 +34,34 @@ img.butterfly{
     border-radius: 100px 0px 100px 0px;
 }
 
-image.theater_stage.jpg {
-    position: relative;
-    z-index: 0;
+.bgImage{
+  background: url(theater_stage.jpg) no-repeat center;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
 }
-image.theater_stage.jpg:before{
-    content: '';
-    background-image: url(theater_stage.jpg);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100px;
-    height: 100px;
-    filter: blur(3px);
-    z-index: -1;
+
+.bgImage:before{
+  content: '';
+  background: inherit;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
 }
-p#stage{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%,-50%);
-    margin:10;
-    padding:0;
-    color: white;
-    font-size: 50px;
+p{
+  margin: 150px 0 200px;
+  text-align: center;
+  font-family: 'Cinzel', serif;
+  font-size: 34px;
+  color: #fff;
+  text-shadow: 0 0 10px rgba(0,0,0,.4);
 }
