--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -34,7 +34,7 @@ img.butterfly{
     border-radius: 100px 0px 100px 0px;
 }
 
-.bgImage{
+img.bgimage{
   background: url(theater_stage.jpg) no-repeat center;
   background-size: cover;
   position: relative;
@@ -42,7 +42,7 @@ img.butterfly{
   overflow: hidden;
 }
 
-.bgImage:before{
+img.bgImage:before{
   content: '';
   background: inherit;
   -webkit-filter: blur(5px);
@@ -61,7 +61,7 @@ p{
   margin: 150px 0 200px;
   text-align: center;
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 50px;
   color: #fff;
   text-shadow: 0 0 10px rgba(0,0,0,.4);
 }
