--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -34,7 +34,7 @@ img.butterfly{
     border-radius: 100px 0px 100px 0px;
 }
 
-img.bgimage{
+img.bgImage{
   background: url(theater_stage.jpg) no-repeat center;
   background-size: cover;
   position: relative;
@@ -61,7 +61,7 @@ p{
   margin: 150px 0 200px;
   text-align: center;
   font-family: sans-serif;
-  font-size: 50px;
+  font-size: 60px;
   color: #fff;
-  text-shadow: 0 0 10px rgba(0,0,0,.4);
+  text-shadow: 0 10 10px rgba(0,0,0,.4);
 }
