--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -39,7 +39,8 @@ div.theater{
   background-size: cover;
   position: relative;
   z-index: 0;
-  overflow: hidden;
+  height: 352px;
+  width: 400px;
 }
 
 div.theater:before{
@@ -58,10 +59,9 @@ div.theater:before{
   z-index: -1;
 }
 p#stage{
-  margin: 150px 0 200px;
-  text-align: center;
+  vertical-align: middle;
   font-family: sans-serif;
   font-size: 55px;
   color: #fff;
-  text-shadow: 0 0 10px rgba(0,0,0,.4);
+  text-shadow: 10px 10px 15px rgba(0,0,0,.4);
 }
