--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -35,7 +35,7 @@ img.butterfly{
 }
 
 div.theater{
-  background: url(theater_stage.jpg) no-repeat center;
+  background: url(theater_stage.jpg);
   background-size: cover;
   position: relative;
   z-index: 0;
@@ -63,5 +63,5 @@ p#stage{
   font-family: sans-serif;
   font-size: 55px;
   color: #fff;
-  text-shadow: 10px 10px 15px rgba(0,0,0,.4);
+  filter: drop-shadow(10px 10px 15px #000000);
 }
