--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -64,4 +64,5 @@ p#stage{
   font-size: 55px;
   color: #fff;
   filter: drop-shadow(10px 10px 15px #000000);
+  background-image: url(theater_stage.jpg);
 }
