--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -60,6 +60,7 @@ div.theater:before{
 }
 p#stage{
   text-align: center;
+  vertical-align: middle;
   font-family: sans-serif;
   font-size: 55px;
   color: #fff;
