--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -61,6 +61,7 @@ div.theater:before{
 p#stage{
   text-align: center;
   vertical-align: middle;
+  padding-top: 175px;
   font-family: sans-serif;
   font-size: 55px;
   color: #fff;
