--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -64,5 +64,5 @@ p#stage{
   font-family: sans-serif;
   font-size: 55px;
   color: #fff;
-  filter: drop-shadow(10px 10px 5px 5px #000000);
+  text-shadow: 10px 10px 5px 3px #000000;
 }
