--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -12,13 +12,10 @@ img.football {
 }
 
 img.tictakto {
-  width: 300px;
-  height: 200px;
-  border-width: 45px;
-  border-style: solid;
-  border-image: url(tic-tac-toe.png) ;
-  border-image-slice: 30;
-  border-image-repeat: round;
+  width: 548px;
+  height: 278px;
+  border-style: solid #000000;
+  border-image: url(tic-tac-toe.png) round;
 }
 
 img.dinosaur {
