--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -7,12 +7,12 @@ img.penguin {
 
 div#tiktactoe{
     border: 27px solid #000;
-    border-image: url(tic-tac-toe.png) 27 round;
+    border-image: url(tic-tac-toe.png) 27 / 596px 326px 596px 326px / 0px round;
 }
 
 div#football{
-    border: 27px solid #000;
-    border-image: url(football_field.jpg) 27 round;
+    filter: grayscale(100%);
+    padding-left: 48px;
 }
 
 img.dinosaur {
