--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -11,6 +11,7 @@ div#tiktactoe{
 }
 
 div#football{
+    background-image: url(football_field.jpg);
     filter: grayscale(100%);
     padding-left: 48px;
 }
