--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -7,7 +7,9 @@ img.penguin {
 
 div#tiktactoe{
     border: 27px solid #000;
-   border-image-slice: url(tic-tac-toe.png) 27 16 27 16 ;
+    border-width: 27px;
+    border-image-slice: url(tic-tac-toe.png) 27 16 27 16 ;
+    border-image-repeat: round;
 }
 
 div#football{
