--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -6,18 +6,12 @@ img.penguin {
 }
 
 div#tiktactoe{
-    width: 60%;
-    height: auto;
-    box-sizing: border-box;
+    margin: 20px auto;
     padding: 20px;
-    margin: 20px;
-    border-style: solid;
-    border-width: 60px 60px 60px 60px;
-    border-image-source: url(tic-tac-toe.png);
-    border-image-slice: 60 60 60 60;
-    border-width: 60px 60px 60px 60px;
-    border-image-outset: 0;
-    border-image-repeat: round;
+    width: 160px;
+    height: 100px;
+    border: 67px solid;
+    border-image: url(tic-tac-toe.png); 67 67 / 67px 67px round space;
 }
 
 div#football{
