--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -11,7 +11,7 @@ div#tiktactoe{
     width: 160px;
     height: 100px;
     border: 67px solid;
-    border-image: url(tic-tac-toe.png); 67 67 / 67px 67px round space;
+    border-image: url(tic-tac-toe.png) 67 67 / 67px 67px round space;
 }
 
 div#football{
