--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -16,7 +16,7 @@ div#tiktactoe{
 }
 
 div#football{
-    background-image: url(football_field.jpg);
+    border-image: url(football_field.jpg);
     filter: grayscale(50%);
     padding-left: 48px;
 }
