--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -3,12 +3,14 @@ img.penguin {
     filter: sepia(50%);
     border-radius: 50%;
     border: 1px solid #000;
+    width: 30%;
 }
 
 img.football {
     margin: auto;
     display: block;
     -webkit-filter: grayscale(100%);
+    width: 30%;
 }
 
 img.tictakto {
@@ -19,19 +21,23 @@ img.tictakto {
   border-image: url(tic-tac-toe.png) round;
   border-image-slice: 30;
   border-image-repeat: round;
+  width: 30%;
 }
 
 img.dinosaur {
     -webkit-filter: hue-rotate(90deg) drop-shadow(10px 1px 5px #000000);
+    width: 30%;
 }
 img.seagull{
     background-image: linear-gradient(-45deg, white, #8c8ce1);
     height: 400px;
     -webkit-filter: drop-shadow(5px 10px 15px #000000);
+    width: 30%;
 }
 img.butterfly{    
     filter: invert(100%) opacity(75%);
     border-radius: 100px 0px 100px 0px;
+    width: 30%;
 }
 
 div.theater{
@@ -41,6 +47,7 @@ div.theater{
   z-index: 0;
   height: 352px;
   width: 400px;
+  width: 30%;
 }
 
 div.theater:before{
@@ -57,6 +64,7 @@ div.theater:before{
   right: -5px;
   bottom: -5px;
   z-index: -1;
+  width: 30%;
 }
 p#stage{  
   padding-top: 130px;
@@ -65,4 +73,5 @@ p#stage{
   font-size: 55px;
   color: #fff;
   text-shadow: 3px 3px 4px #000000;
+  width: 30%;
 }
