--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -30,9 +30,8 @@ img.dinosaur {
 }
 img.seagull{
     background-image: linear-gradient(-45deg, white, #8c8ce1);
-    height: 400px;
     -webkit-filter: drop-shadow(5px 10px 15px #000000);
-    width: 30%;
+    width: 30%
 }
 img.butterfly{    
     filter: invert(100%) opacity(75%);
@@ -47,7 +46,6 @@ div.theater{
   z-index: 0;
   height: 352px;
   width: 400px;
-  width: 30%;
 }
 
 div.theater:before{
