--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -56,3 +56,8 @@ p#stage{
   color: #fff;
   text-shadow: 3px 3px 4px #000000;
 }
+
+.item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
