--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -13,9 +13,9 @@ img.football {
 }
 
 img.tictakto {
-    width: 300px;
-    height: 200px;
-    border: 27px solid #000;
+    width: 500px;
+    height: 300px;
+    border: 27px;
     border-image: url(tic-tac-toe.jpg) 27 / 27px round;
 }
 
