--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -9,13 +9,13 @@ img.football {
     margin: auto;
     display: block;
     -webkit-filter: grayscale(100%);
-    float: none;
+    position:absolute;
 }
 
 img.tictakto {
     width: 500px;
     height: 300px;
-    border-style: 27px solid;
+    border-style: solid;
     border-width: 27px;
     border-image: url(tic-tac-toe.jpg) 27 / 27px round;
 }
