--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -9,12 +9,13 @@ img.football {
     margin: auto;
     display: block;
     -webkit-filter: grayscale(100%);
-    position:absolute;
+    position: absolute;
+    padding: 5px 0px 0px 5px;
 }
 
 img.tictakto {
-    width: 500px;
-    height: 300px;
+    width: 450px;
+    height: 260px;
     border-style: solid;
     border-width: 27px;
     border-image: url(tic-tac-toe.jpg) 27 / 27px round;
