--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -10,12 +10,16 @@ img.football {
     display: block;
     -webkit-filter: grayscale(100%);
     position: absolute;
-    padding: 20px 0px 0px 5px;
+    .absolute {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+ }
 }
 
 img.tictakto {
-    width: 500px;
-    height: 240px;
+    width: 600px;
+    height: 230px;
     border-style: solid;
     border-width: 27px;
     border-image: url(tic-tac-toe.jpg) 27 / 27px round;
