--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -6,10 +6,11 @@ img.penguin {
 }
 
 img.football {
-    margin-left: auto;
-    maegin-right: auto;
+    margin: auto;
     -webkit-filter: grayscale(100%);
     position: absolute;
+    right: 30px;
+    bottom: 30px;
 }
 
 img.tictakto {
