--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -13,7 +13,7 @@ img.football {
 }
 
 img.tictakto {
-    position: relativew;
+    position: relative;
     width: 530px;
     height: 230px;
     border-style: solid;
