--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -7,6 +7,7 @@ img.penguin {
 
 img.football {
     margin: auto;
+    display: block;
     background-image: url(football_field.jpg);
     filter: grayscale(100%);
     padding-left: 48px;
