--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -9,7 +9,7 @@ img.football {
     margin: auto;
     display: block;
     background-image: url(football_field.jpg);
-    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
     padding-left: 48px;
 }
 
