--- a/Root Directory/Imitation/style_imitation.css
+++ b/Root Directory/Imitation/style_imitation.css
@@ -11,6 +11,7 @@ img.football {
     background-image: url(football_field.jpg);
     -webkit-filter: grayscale(100%);
     padding-left: 48px;
+    background-repeat: no-repeat;    
 }
 
 img.tictakto {
