--- a/Root Directory/Blog/style_blog.css
+++ b/Root Directory/Blog/style_blog.css
@@ -22,9 +22,9 @@ p.title2 {
 }
 
 img.logo {
-    align-items: center;
-    max-width: 100px;
-    height: auto;
+    width: 10%;
+    margin: auto;
+    display: block;
 }
 
 img.none {
@@ -65,10 +65,6 @@ img.none {
     }
     
     img.none {
-        filter: grayscale(100%);
-    }
-
-    a {
         filter: grayscale(100%);
     }
 }
