--- a/Root Directory/Final project/style_corp.css
+++ b/Root Directory/Final project/style_corp.css
@@ -34,8 +34,8 @@ div.source {
 p.change {
     width: 60%;
     height: 30px;
-    background-color: whitesmoke;
-    color: whitesmoke;
+    background-color: white;
+    color: white;
     padding: 10px;
     font-size: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
