--- a/Root Directory/Final project/style_corp.css
+++ b/Root Directory/Final project/style_corp.css
@@ -6,6 +6,10 @@ div.title {
     background-color: cadetblue;
 }
 
+p.fake {
+    font-size: 10px;
+}
+
 video.video {
     text-align: center;
     padding: 10px;
